--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- custom css file link  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
@@ -17,7 +17,7 @@
 <div class="container">
 
     <div class="profile">
-        <img src="images/jo.png" alt="">
+        <img src="jo.png" alt="">
         <h3>juliusz ostrowski</h3>
         <p>full stack developer</p>
         <div class="share">
@@ -67,27 +67,27 @@
             <h3 class="title">my services</h3>
             <div class="box-container">
                 <div class="box">
-                    <img src="images/icon-1.png" alt="">
+                    <img src="icon-1.png" alt="">
                     <h3>HTML 5</h3>
                 </div>
                 <div class="box">
-                    <img src="images/icon-2.png" alt="">
+                    <img src="icon-2.png" alt="">
                     <h3>CSS 3</h3>
                 </div>
                 <div class="box">
-                    <img src="images/icon-3.png" alt="">
+                    <img src="icon-3.png" alt="">
                     <h3>JavaScript</h3>
                 </div>
                 <div class="box">
-                    <img src="images/icon-4.png" alt="">
+                    <img src="icon-4.png" alt="">
                     <h3>SASS</h3>
                 </div>
                 <div class="box">
-                    <img src="images/icon-5.png" alt="">
+                    <img src="icon-5.png" alt="">
                     <h3>JQuery</h3>
                 </div>
                 <div class="box">
-                    <img src="images/icon-6.png" alt="">
+                    <img src="icon-6.png" alt="">
                     <h3>react.js</h3>
                 </div>
             </div>
